// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AccountsContainer /> > should render as expected when accounts exist 1`] = `
<div>
  <div
    class="css-1qtey63"
  >
    <h1
      class="chakra-heading css-1e3tj"
    >
      accounts
    </h1>
    <button
      aria-controls="dialog::r2::content"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="chakra-button css-4xx2wk"
      data-part="trigger"
      data-scope="dialog"
      data-state="closed"
      id="dialog::r2::trigger"
      type="button"
    >
      addAccount
    </button>
  </div>
  <h2
    class="chakra-heading css-1e3tj"
  >
    Current
  </h2>
  <div
    class="css-1terknm"
  >
    AccountsCard
    AccountsCard
  </div>
  <h2
    class="chakra-heading css-1e3tj"
  >
    Saving
  </h2>
  <div
    class="css-1terknm"
  >
    AccountsCard
    AccountsCard
    AccountsCard
  </div>
  <h2
    class="chakra-heading css-1e3tj"
  >
    Mortgage
  </h2>
  <div
    class="css-1terknm"
  >
    AccountsCard
  </div>
  <h2
    class="chakra-heading css-1e3tj"
  >
    Loan
  </h2>
  <div
    class="css-1terknm"
  >
    AccountsCard
  </div>
  <h2
    class="chakra-heading css-1e3tj"
  >
    Owed
  </h2>
  <div
    class="css-1terknm"
  >
    AccountsCard
  </div>
</div>
`;

exports[`<AccountsContainer /> > should render as expected when no accounts exist 1`] = `
<div>
  <div
    class="css-1qtey63"
  >
    <h1
      class="chakra-heading css-1e3tj"
    >
      accounts
    </h1>
    <button
      aria-controls="dialog::r0::content"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="chakra-button css-4xx2wk"
      data-part="trigger"
      data-scope="dialog"
      data-state="closed"
      id="dialog::r0::trigger"
      type="button"
    >
      addAccount
    </button>
  </div>
  <div
    class="css-1terknm"
  />
  <div
    class="css-1terknm"
  />
  <div
    class="css-1terknm"
  />
  <div
    class="css-1terknm"
  />
  <div
    class="css-1terknm"
  />
</div>
`;
